infrastructure/k8s/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso
  labels:
    app: sso
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: sso
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso
  labels:
    app: sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso
  template:
    metadata:
      labels:
        app: sso
    spec:
      volumes:
        - name: import
          configMap:
            name: sso
      containers:
        - name: sso
          image: quay.io/keycloak/keycloak:19.0.3
          args: ["start-dev", "--import-realm", "--http-enabled", "true"]
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 5
          volumeMounts:
            - name: import
              mountPath: "/opt/keycloak/data/import"
              readOnly: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso
  annotations:
    kubernetes.io/ingress.class: "public"
spec:  
  tls:
    - secretName: sso-tls
  rules:
    - host: sso.store.mk8s.local
      http:
        paths:
        - backend:
            service:
              name: sso
              port:
                name: http
          path: /
          pathType: Prefix
